packages/ui-library/src/css/layout/_hero-chart.scss
.hero-chart {
    position: relative;
    min-height: 375px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    padding: 25px 25px 110px;
    background-color: $color-strong-neutral-10;
    text-align: center;
    margin: -25px -40px 0 -40px; // negative margins used to make the graphic full-width by negating the padding

    .recharts-wrapper {
        margin: 0 0 0 50%;
        transform: translateX(-50%);
        z-index: $zindex__elevated;
    }
    .recharts-tooltip-wrapper {
        border-radius: 5px !important;
        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
    }

    &__greeting {
        color: $color-white;
        position: absolute;
        top: 25px;
        left: 25px;
        text-transform: uppercase;
        font-size: 18px;
        &--hidden {
            visibility: hidden;
        }
    }

    &__center-text {
        display: flex;
        flex-direction: column;
        align-items: center;
        color: $color-white;
        @include font-pn-light;
        margin: 0 0 15px;
    }

    &__title {
        text-transform: uppercase;
        font-size: 18px;
        line-height: 1em;
    }

    &__value {
        font-size: 55px;
        line-height: 1em;
        min-height: 1em;
        margin: 5px 0;
        @include font-pn-semibold;
    }

    &__subtitle {
        font-size: 16px;
        line-height: 1em;
    }

    &__error {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translateX(-50%) translateY(-70%);
        text-align: center;
        color: $color-white;
    }

    &__error-text {
        font-size: 14px;
        line-height: 1.3em;
        max-width: 200px;
    }

    &__error-icon {
        font-size: 70px;
        margin: 0 0 $spacing-md;
    }

    &__top-chart,
    &__bottom-chart {
        max-width: 850px;
        display: inline-block;
    }
    &__top-chart {
        .recharts-tooltip-wrapper {
            margin-top: -5px;
        }
    }

    &__bottom-chart {
        .recharts-tooltip-wrapper {
            margin-top: 8px;
        }
    }

    &__bottom-chart {
        .recharts-surface {
            transform: scaleY(-1);
        }
    }

    &__rocker {
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        top: 366px;
    }

    &__stat-cards,
    &__dashboard-cards {
        margin-top: -73px;
    }

    .page-loader__box {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-70%);
        margin: 0;
    }
}


.hero-tooltip {
    font-size: 14px;
    text-transform: uppercase;
    color: $color-accent-neutral-10;
    &__bottom-value {
        color: $color-charting-orange;
    }
}

